[package]
name = "pba-assignment-2-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
hex-literal = "0.3.4"
parity-scale-codec = "3.2.2"
serde_json = "1.0.91"
sp-core = "12.0.0"
tungstenite = "0.18.0"
url = "2.3.1"
serde = { version = "1.0.152", features = ["derive"] }

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]
